fix(header): max-height/overflow for flyout menus on large screens

--- a/src/components/global/header/header-interactive.scss
+++ b/src/components/global/header/header-interactive.scss
@@ -72,6 +72,7 @@
       bottom: auto;
       left: auto;
       box-shadow: var(--shadow-menu);
+      max-height: calc(100vh - var(--header-height));
     }
 
     strong {
